# capirca-xlate

./: .gitignore  README.md  acl_schema.yaml  definitions_schema.yaml  pyproject.toml
.github/workflows/: publish.yml  test.yml
capirca_xlate/: xlate.py
capirca_xlate/templates/: acl.pol.j2  def.net.j2  def.svc.j2
tests/: test_xlate.py
typings/ruamel/yaml/: compat.pyi  main.pyi
