[tool.poetry]
name = "capirca-xlate"
version = "0.1.1"
description = ""
authors = ["Tyler Christiansen <code@tylerc.me>"]
readme = "README.md"
packages = [{include = "capirca_xlate"}]

[tool.poetry.dependencies]
python = "^3.10"
"ruamel.yaml" = "^0.17"
Jinja2 = "^3.1"

[tool.poetry.group.dev.dependencies]
pydantic = "^1.10"
mypy = "^1.0"
ipython = "^8.10"
black = "^23.1"
pytest = "^7.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
